--- a/hmwrk-day-3/style.css
+++ b/hmwrk-day-3/style.css
@@ -13,7 +13,7 @@ h2 {
 	color: #0D2C40;
 	letter-spacing: 1px;
 	font-weight: 600;
-	font-size:18px;
+	font-size:30px;
 	text-align: center;
 	margin: 0;
 }
@@ -35,4 +35,9 @@ nav {
 	font-family: "Raleway";
 	font-size: 20px;
 	text-align: center;
+}
+
+ul {
+	font-family: "Raleway";
+	font-size: 18px;
 }
