--- a/hmwrk-day-3/style.css
+++ b/hmwrk-day-3/style.css
@@ -41,3 +41,15 @@ ul {
 	font-family: "Raleway";
 	font-size: 18px;
 }
+
+.image { 
+   position: relative; 
+   width: 100%; /* for IE 6 */
+}
+
+h2 { 
+   position: absolute; 
+   top: 200px; 
+   left: 0; 
+   width: 100%; 
+}
